--- a/res/layout/places_list.xml
+++ b/res/layout/places_list.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:background="#FFFFFF"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    android:paddingTop="10dp" >
+    android:paddingTop="10px">	
 
-    <TextView
+	<TextView
         android:id="@+id/intro"
+        android:textColor="#000000"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pick_a_place"
-        android:textColor="#000000" />
+        android:text="Pick a place"/>
 
     <ListView
-        android:id="@id/android:list"
+ 	android:id="@id/android:list"
+ 	android:textColor="#000000"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:drawSelectorOnTop="true"
-        android:textColor="#000000" />
+ 		android:drawSelectorOnTop="true"/>
 
     <TextView
+    	android:textColor="#000000"
         android:id="@id/android:empty"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textColor="#000000" />
+        android:text="empty"/>
 
 </LinearLayout>
